_generated-doc/1.11/config/quarkus-kafka-streams.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-kafka-streams_configuration]]link:#quarkus-kafka-streams_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kafka-streams_quarkus.kafka-streams.health.enabled]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.health.enabled[quarkus.kafka-streams.health.enabled]`

[.description]
--
Whether or not a health check is published in case the smallrye-health extension is present (defaults to true).
--|boolean 
|`true`


a| [[quarkus-kafka-streams_quarkus.kafka-streams.application-id]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.application-id[quarkus.kafka-streams.application-id]`

[.description]
--
A unique identifier for this Kafka Streams application. If not set, defaults to quarkus.application.name.
--|string 
|`${quarkus.application.name}`


a| [[quarkus-kafka-streams_quarkus.kafka-streams.bootstrap-servers]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.bootstrap-servers[quarkus.kafka-streams.bootstrap-servers]`

[.description]
--
A comma-separated list of host:port pairs identifying the Kafka bootstrap server(s). If not set, fallback to `kafka.bootstrap.servers`, and if not set either use `localhost:9012`.
--|list of host:port 
|`localhost:9012`


a| [[quarkus-kafka-streams_quarkus.kafka-streams.application-server]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.application-server[quarkus.kafka-streams.application-server]`

[.description]
--
A unique identifier of this application instance, typically in the form host:port.
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.topics]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.topics[quarkus.kafka-streams.topics]`

[.description]
--
A comma-separated list of topic names. The pipeline will only be started once all these topics are present in the Kafka cluster.
--|list of string 
|required icon:exclamation-circle[title=Configuration property is required]


a| [[quarkus-kafka-streams_quarkus.kafka-streams.schema-registry-key]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.schema-registry-key[quarkus.kafka-streams.schema-registry-key]`

[.description]
--
The schema registry key. e.g. to diff between different registry impls / instances as they have this registry url under different property key. Red Hat / Apicurio - apicurio.registry.url Confluent - schema.registry.url
--|string 
|`schema.registry.url`


a| [[quarkus-kafka-streams_quarkus.kafka-streams.schema-registry-url]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.schema-registry-url[quarkus.kafka-streams.schema-registry-url]`

[.description]
--
The schema registry url.
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.security.protocol]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.security.protocol[quarkus.kafka-streams.security.protocol]`

[.description]
--
The security protocol to use See https://docs.confluent.io/current/streams/developer-guide/security.html++#++security-example
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.mechanism]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.mechanism[quarkus.kafka-streams.sasl.mechanism]`

[.description]
--
SASL mechanism used for client connections
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.jaas-config]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.jaas-config[quarkus.kafka-streams.sasl.jaas-config]`

[.description]
--
JAAS login context parameters for SASL connections in the format used by JAAS configuration files
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.client-callback-handler-class]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.client-callback-handler-class[quarkus.kafka-streams.sasl.client-callback-handler-class]`

[.description]
--
The fully qualified name of a SASL client callback handler class
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-callback-handler-class]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-callback-handler-class[quarkus.kafka-streams.sasl.login-callback-handler-class]`

[.description]
--
The fully qualified name of a SASL login callback handler class
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-class]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-class[quarkus.kafka-streams.sasl.login-class]`

[.description]
--
The fully qualified name of a class that implements the Login interface
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-service-name]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-service-name[quarkus.kafka-streams.sasl.kerberos-service-name]`

[.description]
--
The Kerberos principal name that Kafka runs as
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-kinit-cmd]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-kinit-cmd[quarkus.kafka-streams.sasl.kerberos-kinit-cmd]`

[.description]
--
Kerberos kinit command path
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor[quarkus.kafka-streams.sasl.kerberos-ticket-renew-window-factor]`

[.description]
--
Login thread will sleep until the specified window factor of time from last refresh
--|double 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter[quarkus.kafka-streams.sasl.kerberos-ticket-renew-jitter]`

[.description]
--
Percentage of random jitter added to the renewal time
--|double 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin[quarkus.kafka-streams.sasl.kerberos-min-time-before-relogin]`

[.description]
--
Percentage of random jitter added to the renewal time
--|long 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-refresh-window-factor]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-refresh-window-factor[quarkus.kafka-streams.sasl.login-refresh-window-factor]`

[.description]
--
Login refresh thread will sleep until the specified window factor relative to the credential's lifetime has been reached-
--|double 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-refresh-window-jitter]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-refresh-window-jitter[quarkus.kafka-streams.sasl.login-refresh-window-jitter]`

[.description]
--
The maximum amount of random jitter relative to the credential's lifetime
--|double 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-refresh-min-period]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-refresh-min-period[quarkus.kafka-streams.sasl.login-refresh-min-period]`

[.description]
--
The desired minimum duration for the login refresh thread to wait before refreshing a credential
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-refresh-buffer]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.sasl.login-refresh-buffer[quarkus.kafka-streams.sasl.login-refresh-buffer]`

[.description]
--
The amount of buffer duration before credential expiration to maintain when refreshing a credential
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.protocol]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.protocol[quarkus.kafka-streams.ssl.protocol]`

[.description]
--
The SSL protocol used to generate the SSLContext
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.provider]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.provider[quarkus.kafka-streams.ssl.provider]`

[.description]
--
The name of the security provider used for SSL connections
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.cipher-suites]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.cipher-suites[quarkus.kafka-streams.ssl.cipher-suites]`

[.description]
--
A list of cipher suites
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.enabled-protocols]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.enabled-protocols[quarkus.kafka-streams.ssl.enabled-protocols]`

[.description]
--
The list of protocols enabled for SSL connections
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.truststore.type]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.truststore.type[quarkus.kafka-streams.ssl.truststore.type]`

[.description]
--
Store type
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.truststore.location]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.truststore.location[quarkus.kafka-streams.ssl.truststore.location]`

[.description]
--
Store location
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.truststore.password]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.truststore.password[quarkus.kafka-streams.ssl.truststore.password]`

[.description]
--
Store password
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.type]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.type[quarkus.kafka-streams.ssl.keystore.type]`

[.description]
--
Store type
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.location]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.location[quarkus.kafka-streams.ssl.keystore.location]`

[.description]
--
Store location
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.password]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keystore.password[quarkus.kafka-streams.ssl.keystore.password]`

[.description]
--
Store password
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.type]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.type[quarkus.kafka-streams.ssl.key.type]`

[.description]
--
Store type
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.location]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.location[quarkus.kafka-streams.ssl.key.location]`

[.description]
--
Store location
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.password]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.key.password[quarkus.kafka-streams.ssl.key.password]`

[.description]
--
Store password
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.keymanager-algorithm]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.keymanager-algorithm[quarkus.kafka-streams.ssl.keymanager-algorithm]`

[.description]
--
The algorithm used by key manager factory for SSL connections
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.trustmanager-algorithm]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.trustmanager-algorithm[quarkus.kafka-streams.ssl.trustmanager-algorithm]`

[.description]
--
The algorithm used by trust manager factory for SSL connections
--|string 
|


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.endpoint-identification-algorithm]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.endpoint-identification-algorithm[quarkus.kafka-streams.ssl.endpoint-identification-algorithm]`

[.description]
--
The endpoint identification algorithm to validate server hostname using server certificate
--|string 
|`https`


a| [[quarkus-kafka-streams_quarkus.kafka-streams.ssl.secure-random-implementation]]`link:#quarkus-kafka-streams_quarkus.kafka-streams.ssl.secure-random-implementation[quarkus.kafka-streams.ssl.secure-random-implementation]`

[.description]
--
The SecureRandom PRNG implementation to use for SSL cryptography operations
--|string 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
